--- a/index.html
+++ b/index.html
@@ -8,25 +8,52 @@
     <title>Document</title>
 </head>
 <body>
-    <main class="main">
-        <div class="cell full-width green">Colores</div>
-        <div class="cell black">black</div>
-        <div class="cell teal">teal</div>
-        <div class="cell blue">blue</div>
-        <div class="cell navy">navy</div>
-        <div class="cell lime">lime</div>
-        <div class="cell white">white</div>
-        <div class="cell purple">purple</div>
-        <div class="cell yellow">yellow</div>
-        <div class="cell olive">olive</div>
-        <div class="cell red">red</div>
-        <div class="cell black">marron</div>
-        <div class="cell gray">gray</div>
-        <div class="cell olive">olive</div>
-        <div class="cell red">red</div>
-        <div class="cell fuchsia">fuchsia</div>
-        <div class="cell half-width green">green</div>
-       
+    <main>
+        <section>
+            <h2>Colores de Fondo</h2>
+            <div class="grid-box">
+                <div class="cell full-width green black-text">Colores</div>
+                <div class="cell black black-text">black</div>
+                <div class="cell teal black-text">teal</div>
+                <div class="cell blue black-text">blue</div>
+                <div class="cell navy black-text">navy</div>
+                <div class="cell lime black-text">lime</div>
+                <div class="cell white black-text">white</div>
+                <div class="cell purple black-text">purple</div>
+                <div class="cell yellow black-text">yellow</div>
+                <div class="cell olive black-text">olive</div>
+                <div class="cell red black-text">red</div>
+                <div class="cell black black-text">marron</div>
+                <div class="cell gray black-text">gray</div>
+                <div class="cell olive black-text">olive</div>
+                <div class="cell red black-text">red</div>
+                <div class="cell fuchsia black-text">fuchsia</div>
+                <div class="cell half-width green black-text">green</div>
+            </div>   
+     </section> 
+     <section>
+        <h2>Colores de letra</h2>
+        <div class="colorname-box">
+            <p class="black no-background">black</p>
+            <p class="teal no-background">teal</p>
+            <p class="blue no-background">blue</p>
+            <p class="navy no-background">navy</p>
+            <p class="lime no-background">lime</p>
+            <p class="white no-background">white</p>
+            <p class="purple no-background">purple</p>
+            <p class="yellow no-background">yellow</p>
+        </div>
+        <div class="colorname-box">
+            <p class="olive no-background">olive</p>
+            <p class="red no-background">red</p>
+            <p class="brown no-background">brown</p>
+            <p class="gray no-background">gray</p>
+            <p class="fuchsia no-background">fuchsia</p>
+            <p class="green no-background">green</p>
+            <p class="aqua no-background">aqua</p>
+            <p class="silver no-background">silver</p>
+        </div>
+     </section>
     </main>
 </body>
 </html>
